ec2Lab-cf.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description:  Creates instances for Ec2 Alexa Lab
Parameters:
  KeyName:
    Description:  "KeyName for instances"
    Type:  "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription:  "must be the name of an existing EC2 KeyPair"

  SSHLocation:
    Description:  CIDR describing allowed IP ranges of access
    Type:  "String"
    MinLength:  9
    MaxLength:  18
    Default:  "0.0.0.0/0"
    AllowedPattern:  "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription:  "must be a valid IP CIDR range of the form x.x.x.x/x."

Resources:
  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription:  "Enable SSH access via port 22"
      VpcId:  vpc-75d5d111
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:  !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:  !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp:  !Ref SSHLocation

  AlexaXX:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType:  "m3.medium"
      SecurityGroupIds:
       - !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      SubnetId:  "subnet-83ba09a9"
      ImageId:  "ami-2ab03b3d"
      Tags:
        - Key: "app"
          Value:  "alexa"
        - Key: "group"
          Value:  "XX"
        - Key: "Name"
          Value:  "AlexaXX"
    DependsOn:  InstanceSecurityGroup

  AlexaXXDns:
    Type:  "AWS::Route53::RecordSet"
    Properties:
      HostedZoneName: "vanderfox.net."
      Comment:  "DNS Name for my instance"
      Name:  "AlexaXX.aws.vanderfox.net"
      Type:  "A"
      TTL:  "60"
      ResourceRecords:
       - !GetAtt AlexaXX.PublicIp
    DependsOn:  AlexaXX
